--- a/localization/simp_chinese/zz_quieter_events_l_simp_chinese.yml
+++ b/localization/simp_chinese/zz_quieter_events_l_simp_chinese.yml
@@ -12,51 +12,50 @@
   quieter.birth.dynastic.message:0 "[mother.Custom2('MyCharacterIntroduction', ROOT.Char)|U] has given birth to a [child.Custom('GetDaughterSon')]! They're calling the little one [child.GetFirstNameNoTooltip]."
   quieter.birth.dynastic.message.twin:0 "[mother.Custom2('MyCharacterIntroduction', ROOT.Char)|U] has given birth to two [child.Custom('TwinDaughtersSonsChildren')]!"
 
-# TODO: Add working gamerules to switch between vanilla and quiet events
-  # rule_secret_unbeliever_found_rule:0 "QE: A Secret Unbeliever is Found"
-  # setting_suf_vanilla:0 "Vanilla Event"
-  # setting_suf_vanilla_desc:0 "The standard event will fire as normal."
-  # setting_suf_quieter:0 "Quieter Event" 
-  # setting_suf_quieter_desc:0 "A simple message will notify you of the discovery."
+  rule_secret_unbeliever_found_rule:0 "QE: A Secret Unbeliever is Found"
+  setting_suf_vanilla:0 "Vanilla Event"
+  setting_suf_vanilla_desc:0 "The standard event will fire as normal."
+  setting_suf_quieter:0 "Quieter Event" 
+  setting_suf_quieter_desc:0 "A simple message will notify you of the discovery."
 
-  # rule_prison_release_acceptance_rule:0 "QE: Prisoner Release Acceptance"
-  # setting_pra_vanilla:0 "Vanilla Event"
-  # setting_pra_vanilla_desc:0 "The standard event will fire as normal."
-  # setting_pra_quieter:0 "Quieter Event"
-  # setting_pra_quieter_desc:0 "A \"good\" toast event will notify you of release acceptance."
+  rule_prison_release_acceptance_rule:0 "QE: Prisoner Release Acceptance"
+  setting_pra_vanilla:0 "Vanilla Event"
+  setting_pra_vanilla_desc:0 "The standard event will fire as normal."
+  setting_pra_quieter:0 "Quieter Event"
+  setting_pra_quieter_desc:0 "A \"good\" toast event will notify you of release acceptance."
 
-  # rule_vassal_imprison_success_rule:0 "QE: Vassal Imprison Success"
-  # setting_vis_vanilla:0 "Vanilla Event"
-  # setting_vis_vanilla_desc:0 "The standard event will fire as normal."
-  # setting_vis_quieter:0 "Quieter Event"
-  # setting_vis_quieter_desc:0 "A \"neutral\" toast event will notify you of the successful imprisonment."
+  rule_vassal_imprison_success_rule:0 "QE: Vassal Imprison Success"
+  setting_vis_vanilla:0 "Vanilla Event"
+  setting_vis_vanilla_desc:0 "The standard event will fire as normal."
+  setting_vis_quieter:0 "Quieter Event"
+  setting_vis_quieter_desc:0 "A \"neutral\" toast event will notify you of the successful imprisonment."
 
-  # rule_marriage_proposal_accepted_rule:0 "QE: Marriage Proposal Accepted"
-  # setting_mpa_vanilla:0 "Vanilla Event"
-  # setting_mpa_vanilla_desc:0 "The standard event will fire as normal."
-  # setting_mpa_quieter:0 "Quieter Event"
-  # setting_mpa_quieter_desc:0 "A \"good\" toast event will notify you of the marriage acceptance."
+  rule_marriage_proposal_accepted_rule:0 "QE: Marriage Proposal Accepted"
+  setting_mpa_vanilla:0 "Vanilla Event"
+  setting_mpa_vanilla_desc:0 "The standard event will fire as normal."
+  setting_mpa_quieter:0 "Quieter Event"
+  setting_mpa_quieter_desc:0 "A \"good\" toast event will notify you of the marriage acceptance."
 
-  # rule_seduction_scheme_discovery_rule:0 "QE: Seduction Scheme Discovery"
-  # setting_ssd_vanilla:0 "Vanilla Event"
-  # setting_ssd_vanilla_desc:0 "The standard event will fire as normal."
-  # setting_ssd_quieter:0 "Quieter Event"
-  # setting_ssd_quieter_desc:0 "A \"bad\" small event will notify you of a seduction scheme by your liege/spouse."
+  rule_seduction_scheme_discovery_rule:0 "QE: Seduction Scheme Discovery"
+  setting_ssd_vanilla:0 "Vanilla Event"
+  setting_ssd_vanilla_desc:0 "The standard event will fire as normal."
+  setting_ssd_quieter:0 "Quieter Event"
+  setting_ssd_quieter_desc:0 "A \"bad\" small event will notify you of a seduction scheme by your liege/spouse."
 
-  # rule_hostile_scheme_discovery_rule:0 "QE: Hostile Scheme Discovery"
-  # setting_hsd_vanilla:0 "Vanilla Event"
-  # setting_hsd_vanilla_desc:0 "The standard event will fire as normal."
-  # setting_hsd_quieter:0 "Quieter Event"
-  # setting_hsd_quieter_desc:0 "A \"good\" message notification will inform you of a hostile scheme that's been found via spymaster."
+  rule_hostile_scheme_discovery_rule:0 "QE: Hostile Scheme Discovery"
+  setting_hsd_vanilla:0 "Vanilla Event"
+  setting_hsd_vanilla_desc:0 "The standard event will fire as normal."
+  setting_hsd_quieter:0 "Quieter Event"
+  setting_hsd_quieter_desc:0 "A \"good\" message notification will inform you of a hostile scheme that's been found via spymaster."
 
-  # rule_hostile_scheme_owner_discovery_rule:0 "QE: Hostile Scheme Owner Discovery"
-  # setting_hso_vanilla:0 "Vanilla Event"
-  # setting_hso_vanilla_desc:0 "The standard event will fire as normal."
-  # setting_hso_quieter:0 "Quieter Event"
-  # setting_hso_quieter_desc:0 "A \"good\" message notification will inform you of who is the owner of a hostile scheme via spymaster."
+  rule_hostile_scheme_owner_discovery_rule:0 "QE: Hostile Scheme Owner Discovery"
+  setting_hso_vanilla:0 "Vanilla Event"
+  setting_hso_vanilla_desc:0 "The standard event will fire as normal."
+  setting_hso_quieter:0 "Quieter Event"
+  setting_hso_quieter_desc:0 "A \"good\" message notification will inform you of who is the owner of a hostile scheme via spymaster."
 
-  # rule_child_of_my_dynasty_rule:0 "QE: Child of My Dynasty Event"
-  # setting_cod_vanilla:0 "Vanilla Event"
-  # setting_cod_vanilla_desc:0 "The standard event will fire as normal."
-  # setting_cod_quieter:0 "Quieter Event"
-  # setting_cod_quieter_desc:0 "A \"good\" toast event will notify you when a new member of your dynasty is born and who the parents are. No longer an option to name the child via event."
+  rule_child_of_my_dynasty_rule:0 "QE: Child of My Dynasty Event"
+  setting_cod_vanilla:0 "Vanilla Event"
+  setting_cod_vanilla_desc:0 "The standard event will fire as normal."
+  setting_cod_quieter:0 "Quieter Event"
+  setting_cod_quieter_desc:0 "A \"good\" toast event will notify you when a new member of your dynasty is born and who the parents are. No longer an option to name the child via event."
