--- a/localization/simp_chinese/zz_quieter_events_l_simp_chinese.yml
+++ b/localization/simp_chinese/zz_quieter_events_l_simp_chinese.yml
@@ -11,3 +11,54 @@
   quieter.birth.dynastic.title:0 "吾族的子嗣"
   quieter.birth.dynastic.message:0 "[mother.Custom2('MyCharacterIntroduction', ROOT.Char)|U]生下了一个[child.Custom('GetDaughterSon')]！\n小家伙叫[child.GetFirstNameNoTooltip]。"
   quieter.birth.dynastic.message.twin:0 "[mother.Custom2('MyCharacterIntroduction', ROOT.Char)|U]生下了两个[child.Custom('TwinDaughtersSonsChildren')]！"
+
+  # Game Rules
+  game_rule_category_quieter_events:0 "Quieter Events"
+
+  rule_secret_unbeliever_found_rule:0 "QE: 一个秘密的无神论者被发现"
+  setting_suf_vanilla:0 "香草"
+  setting_suf_vanilla_desc:0 "标准事件将照常触发。"
+  setting_suf_quieter:0 "Quieter" 
+  setting_suf_quieter_desc:0 "您将收到一条简单的消息通知。"
+
+  rule_prison_release_acceptance_rule:0 "QE: 囚犯释放接受"
+  setting_pra_vanilla:0 "香草"
+  setting_pra_vanilla_desc:0 "标准事件将照常触发。"
+  setting_pra_quieter:0 "Quieter"
+  setting_pra_quieter_desc:0 "一个好的庆祝活动会通知您版本已被接受。"
+
+  rule_vassal_imprison_success_rule:0 "QE: 附庸囚禁成功"
+  setting_vis_vanilla:0 "香草"
+  setting_vis_vanilla_desc:0 "标准事件将照常触发。"
+  setting_vis_quieter:0 "Quieter"
+  setting_vis_quieter_desc:0 "中立的祝酒事件会通知您监禁成功。"
+
+  rule_marriage_proposal_accepted_rule:0 "QE: 求婚被接受了"
+  setting_mpa_vanilla:0 "香草"
+  setting_mpa_vanilla_desc:0 "标准事件将照常触发。"
+  setting_mpa_quieter:0 "Quieter"
+  setting_mpa_quieter_desc:0 "一场成功的祝酒仪式将告诉你对方是否接受了你的求婚。"
+
+  rule_seduction_scheme_discovery_rule:0 "QE: 诱骗计划的发现"
+  setting_ssd_vanilla:0 "香草"
+  setting_ssd_vanilla_desc:0 "标准事件将照常触发。"
+  setting_ssd_quieter:0 "Quieter"
+  setting_ssd_quieter_desc:0 "一条不祥之兆会提醒你，你的君主/配偶正在进行诱惑你的阴谋。"
+
+  rule_hostile_scheme_discovery_rule:0 "QE: 敌对阴谋的发现"
+  setting_hsd_vanilla:0 "香草"
+  setting_hsd_vanilla_desc:0 "标准事件将照常触发。"
+  setting_hsd_quieter:0 "Quieter"
+  setting_hsd_quieter_desc:0 "一条好的情报会告知你间谍头子发现的敌对阴谋。"
+
+  rule_hostile_scheme_owner_discovery_rule:0 "QE: 敌对计划所有者发现"
+  setting_hso_vanilla:0 "香草"
+  setting_hso_vanilla_desc:0 "标准事件将照常触发。"
+  setting_hso_quieter:0 "Quieter"
+  setting_hso_quieter_desc:0 "一条好的信息会通过间谍头目告诉你敌对计划的幕后主使是谁。"
+
+  rule_child_of_my_dynasty_rule:0 "QE: 吾族的子嗣"
+  setting_cod_vanilla:0 "香草"
+  setting_cod_vanilla_desc:0 "标准事件将照常触发。"
+  setting_cod_quieter:0 "Quieter"
+  setting_cod_quieter_desc:0 "一个好的祝酒活动会在家族新成员诞生时通知您，并显示其父母信息。但您现在无法通过活动为孩子命名。"
